mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  labels:
    app: mongo-express
  annotations:
    kubernetes.io/ingress.class: traefik
    # change the annotation
spec:
  rules:
  - host: mongo-express.cf7a22b3-2609-437d-9024-f0a0f37b7848.k8s.civo.com
    # host: <subdomain name = any prefix for app><k8s DNS Name>
    http:
      paths:
      - path: /
        # set path (absolute path) to /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081

# This Ingress.yaml is specific to Civo cloud provider by considering traefik (edge router) as a ingress controller
